src/test/ui/macros/macro-path-prelude-fail-3.stderr
error: cannot find macro `inline` in this scope
  --> $DIR/macro-path-prelude-fail-3.rs:2:5
   |
LL |     inline!();
   |     ^^^^^^ help: did you mean `line`? (a similarly named macro)
   |
  ::: $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
LL |     macro_rules! line {
   |     ----------------- similarly named macro `line` defined here
   |
   = note: `inline` is in scope, but it is an attribute: `#[inline]`

error: aborting due to previous error

